# Beat-Box

./: README.md
audio_cmake/: CMakeLists.txt
audio_cmake/app/: CMakeLists.txt
audio_cmake/app/include/: application_control.h  audioMixer_control.h  audioMixer_helper.h  audioMixer_template.h  audioMixer_upd.h  i2cbus1_control.h  joystick_control.h  periodTimer.h  processTime_control.h  shutdown_control.h
audio_cmake/app/src/: application_control.c  audioMixer_control.c  audioMixer_execution.c  audioMixer_helper.c  audioMixer_template.c  audioMixer_udp.c  audio_control.c  i2cbus1_control.c  joystick_control.c  main  main.c  processTime_control.c  shutdown_control.c  testaudio.c  wave_player.c
audio_cmake/hal/include/: hal_buttonUp.h  hal_gpio27.h  hal_helper.h  i2c_configure.h  joystick_gpio27.h  joystick_gpioDown.h  joystick_gpioLeft.h  joystick_gpioPress.h  joystick_gpioRight.h  joystick_gpioUp.h  register_configure.h
audio_cmake/hal/src/: hal_buttonUp.c  hal_gpio27.c  hal_helper.c  i2c_configure.c  joystick_gpio27.c  joystick_gpioDown.c  joystick_gpioLeft.c  joystick_gpioPress.c  joystick_gpioRight.c  joystick_gpioUp.c  register_configure.c
beatbox-server/: package.json
beatbox-server-copy/: server.js
beatbox-server/public/: index.html  style.css
beatbox-server/public/javascripts/: code.js
node_server/: package-lock.json  package.json  server.js
node_server/lib/: helper_server.js  math_server.js  socket_server.js
node_server/public/: code.js  index.html  style.css
node_server/public/javascripts/: code.js  math_ui.js
